--- a/adl_lrs/templates/home.html
+++ b/adl_lrs/templates/home.html
@@ -23,7 +23,7 @@
         <h1 class="splash-head">ADL Learning Record Store</h1>
         <p class="splash-subhead">
           Welcome to the ADL LRS. This is a reference implementation of an LRS as described in the 
-          <a href="https://github.com/adlnet/xAPI-Spec/blob/master/xAPI.md#experience-api" target="_blank"> Experience API Specification</a>
+          <a href="https://github.com/adlnet/xAPI-Spec/blob/master/xAPI.md#experience-api" target="_blank" alt="experience api spec"> Experience API Specification</a>
         </p>
     </div>
 </div>
@@ -90,7 +90,7 @@
           Want to make sure your statement is valid? Validate it here so you're not sending bad statements!
         </p>
         <p>
-          <a class="pure-button pull-right" href="{% url adl_lrs.views.stmt_validator %}">Validate</a>
+          <a class="pure-button pull-right" href="{% url 'adl_lrs.views.stmt_validator' %}">Validate</a>
         </p>
       </div>
       <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-5">
@@ -105,7 +105,7 @@
       <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-5">
         <h3 class="content-subhead"><i class="fa fa-mobile"></i>Android App</h3>
         <p>
-          Check out the LRS in action on the Google Play Store. Download the app <a target="_blank" href="https://play.google.com/store/apps/details?id=org.adl.roses&amp;hl=en">here</a>.
+          Check out the LRS in action on the Google Play Store. Download the app <a target="_blank" href="https://play.google.com/store/apps/details?id=org.adl.roses&hl=en">here</a>.
         </p>
       </div>
     </div>
@@ -121,12 +121,12 @@
             <li>By default, only HTTP Auth is enabled. To enable OAuth, have your administrator set the 'OAUTH_ENABLED' flag to true in settings.py</li>                
             <li>While registering, submit the name and description of the client you wish to authorize</li>
             <li>Once submitted, you will receive a client ID and client secret. Use these with the appropriate OAuth
-              headers to perform the initial handshake to gain your temporary token. ({% url oauth:oauth_provider.views.request_token %}) <b>NOTE: If you are not familiar with OAuth, please consult the <a target="_blank" href="https://github.com/adlnet/xAPI-Spec/blob/master/xAPI.md">spec</a> and the OAuth 1.0 <a target="_blank" href="http://tools.ietf.org/html/rfc5849">RFC</a></b></li>
-            <li>You'll then receive your request token. Use this when visiting the authentication page ({% url oauth:oauth_provider.views.user_authorization %}). An LRS OAuth ID will be issued to you for you to POST back to the authentication page from your client</li>
-            <li>Once the client is authenticated, send the appropriate OAuth headers and values from your token to gain an access token.({% url oauth:oauth_provider.views.access_token %})</li>
+              headers to perform the initial handshake to gain your temporary token. ({% url 'oauth:oauth_provider.views.request_token' %}) <b>NOTE: If you are not familiar with OAuth, please consult the <a target="_blank" href="https://github.com/adlnet/xAPI-Spec/blob/master/xAPI.md">spec</a> and the OAuth 1.0 <a target="_blank" href="http://tools.ietf.org/html/rfc5849">RFC</a></b></li>
+            <li>You'll then receive your request token. Use this when visiting the authentication page ({% url 'oauth:oauth_provider.views.user_authorization' %}). An LRS OAuth ID will be issued to you for you to POST back to the authentication page from your client</li>
+            <li>Once the client is authenticated, send the appropriate OAuth headers and values from your token to gain an access token.({% url 'oauth:oauth_provider.views.access_token' %})</li>
             <li>You can now send this access token in with the OAuth headers when making calls to the LRS system</li>
           </ul>
-          <a class="pure-button" href="{% url adl_lrs.views.reg_client %}">Register OAuth1 Client</a>
+          <a class="pure-button" href="{% url 'adl_lrs.views.reg_client' %}">Register OAuth1 Client</a>
         </p>
     </div>
     <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
@@ -144,7 +144,7 @@
             </li>
             <li>You can now send this access token in with the OAuth2 headers when making calls to the LRS system</li>
           </ul>
-          <a class="pure-button" href="{% url adl_lrs.views.reg_client2 %}">Register OAuth2 Client</a>
+          <a class="pure-button" href="{% url 'adl_lrs.views.reg_client2' %}">Register OAuth2 Client</a>
         </p>        
     </div>
   </div>
@@ -152,7 +152,7 @@
     <h2 class="content-head is-center">Sign up for HTTP Basic Credentials</h2>
       <div class="pure-g">
           <div class="l-box-lrg pure-u-1 pure-u-md-2-5">
-              <form class="pure-form pure-form-stacked" action="{% url adl_lrs.views.register %}" method="post">
+              <form class="pure-form pure-form-stacked" action="{% url 'adl_lrs.views.register' %}" method="post">
                   {% csrf_token %}
                   <fieldset>
                       {% for field in form %}
@@ -182,7 +182,7 @@
       </div>
   </div>
   <div class="footer l-box is-center">
-      <img class="brand" height="35" width="55" src="{{ STATIC_URL }}img/adllogo.png" alt="experience api logo"/> Advanced Distributed Learning
+      <img class="brand" height="35" width="auto" class="pure-img" src="{{ STATIC_URL }}/img/adllogo.png" alt="experience api logo"/> Advanced Distributed Learning
       <p>This is an official website of the U.S. Government &copy; Advanced Distributed Learning</p>
   </div>
 </div>
